src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_17_1.deca
// Description:
//    regle 3.17 opération partielle
//
// Resultats:
//    Ligne 9: Variable 'a' already declared.

{
    int a;
    int a;
}
// message : Variable 'a' already declared.
// raison : operation partielle.
